add all cpp files under suite folder to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.15)
 
 project(jpack_test)
 
-add_executable(jpack_test test/main.cpp test/suite/sample_suite.cpp)
+file(GLOB_RECURSE SUITES RELATIVE ${CMAKE_SOURCE_DIR} "test/suite/*.cpp")
+add_executable(jpack_test test/main.cpp ${SUITES})
 
 set_property(TARGET jpack_test PROPERTY CXX_STANDARD 11)
 set_property(TARGET jpack_test PROPERTY CXX_STANDARD_REQUIRED ON)
