--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule ".\\third_party\\googletest"]
-	path = .\\third_party\\googletest
+[submodule "./third_party/googletest"]
+	path = third_party/googletest
 	url = https://github.com/google/googletest.git
-[submodule ".\\third_party\\nlohmann_json"]
-	path = .\\third_party\\nlohmann_json
+[submodule "./third_party/nlohmann_json"]
+	path = third_party/nlohmann_json
 	url = https://github.com/nlohmann/json.git
